Update Tests to run with Java 17 - uses HttpCLient of Java 11 - makes GET-request for bitbucket (phantomjs) - checks that the pattern of `fileMatchInside` can be compiled